@@ -50,6 +50,8 @@
             --add-exports com.azure.core/com.azure.core.implementation.util=ALL-UNNAMED
             --add-exports com.azure.monitor.ingestion/com.azure.monitor.ingestion.implementation=ALL-UNNAMED
             --add-opens com.azure.monitor.ingestion/com.azure.monitor.ingestion=ALL-UNNAMED
+            --add-opens com.azure.monitor.ingestion/com.azure.monitor.ingestion=com.fasterxml.jackson.databind
+            --add-opens com.azure.monitor.ingestion/com.azure.monitor.ingestion.implementation=com.fasterxml.jackson.databind
         </javaModulesSurefireArgLine>
     </properties>
 
@@ -64,13 +66,18 @@
         <dependency>
             <groupId>com.azure</groupId>
             <artifactId>azure-core</artifactId>
-            <version>1.46.0</version> <!-- {x-version-update;com.azure:azure-core;dependency} -->
+            <version>1.48.0</version> <!-- {x-version-update;com.azure:azure-core;dependency} -->
         </dependency>
         <dependency>
             <groupId>com.azure</groupId>
             <artifactId>azure-core-http-netty</artifactId>
-            <version>1.14.0</version> <!-- {x-version-update;com.azure:azure-core-http-netty;dependency} -->
+            <version>1.14.2</version> <!-- {x-version-update;com.azure:azure-core-http-netty;dependency} -->
         </dependency>
+      <dependency>
+        <groupId>com.azure</groupId>
+        <artifactId>azure-json</artifactId>
+        <version>1.1.0</version> <!-- {x-version-update;com.azure:azure-json;dependency} -->
+      </dependency>
 
         <!-- test -->
         <dependency>
@@ -94,19 +101,19 @@
         <dependency>
             <groupId>com.azure</groupId>
             <artifactId>azure-core-test</artifactId>
-            <version>1.23.0</version> <!-- {x-version-update;com.azure:azure-core-test;dependency} -->
+            <version>1.24.1</version> <!-- {x-version-update;com.azure:azure-core-test;dependency} -->
             <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>io.projectreactor</groupId>
             <artifactId>reactor-test</artifactId>
-            <version>3.4.34</version> <!-- {x-version-update;io.projectreactor:reactor-test;external_dependency} -->
+            <version>3.4.36</version> <!-- {x-version-update;io.projectreactor:reactor-test;external_dependency} -->
             <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>com.azure</groupId>
             <artifactId>azure-identity</artifactId>
-            <version>1.11.2</version> <!-- {x-version-update;com.azure:azure-identity;dependency} -->
+            <version>1.12.0</version> <!-- {x-version-update;com.azure:azure-identity;dependency} -->
             <scope>test</scope>
         </dependency>
     </dependencies>
